Changed composer package name to helpers-php

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "wocodes/helpers",
+    "name": "wocodes/helpers-php",
     "description": "A collection of quick helper methods for common php code implementation",
     "license": "MIT",
     "authors": [
